# Homework

./: 3 Семинар.cpp  3-ий семестр.cpp  3-ий семестр.sln  3-ий семестр.vcxproj  3-ий семестр.vcxproj.filters  4 Семинар.cpp  CMakeLists.txt  Functions.cpp  Functions.h  Nature.cpp  Nature.h  README.md  Shapes.cpp  Shapes.h  Solve.cpp  Solve.h  Весь семестр.cpp  Семинар 2.sln  Семинар 5.cpp  Семинар 6.cpp
Extra/: Extra task.cpp  Vectors (copy).h
sem10/: Factory.h  Семинар 10.cpp
sem2/: 2 Семинар.cpp  Array.cpp  Array.h
sem3/: 3 Семинар.cpp  Solve.cpp  Solve.h
sem4/: 4 Семинар.cpp  Functions.cpp  Functions.h
sem5/: Nature.cpp  Nature.h  Семинар 5.cpp
sem6/: Shapes.cpp  Shapes.h  Семинар 6.cpp
sem7/: Vectors.h  Семинар 7.cpp
